<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
					<release>21</release>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <parent>
        <artifactId>de.metas.parent</artifactId>
        <groupId>de.metas</groupId>
        <version>10.0.0</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <version>10.0.0</version> <!-- needed by versions:set during the jenkins build -->
    <groupId>de.metas.payment.revolut</groupId>
    <artifactId>de.metas.payment.revolut</artifactId>

    <description>Revolut Payments</description>

    <dependencies>

        <dependency>
            <groupId>de.metas.util</groupId>
            <artifactId>de.metas.util</artifactId>
            <version>10.0.0</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>de.metas.banking</groupId>
            <artifactId>de.metas.banking.base</artifactId>
            <version>10.0.0</version>
        </dependency>

        <dependency>
            <groupId>de.metas.adempiere.adempiere</groupId>
            <artifactId>de.metas.adempiere.adempiere.base</artifactId>
            <version>10.0.0</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>

        <dependency>
            <groupId>de.metas.adempiere.adempiere</groupId>
            <artifactId>de.metas.adempiere.adempiere.base</artifactId>
            <version>10.0.0</version>
            <scope>test</scope>
            <classifier>tests</classifier>
        </dependency>



        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>
</project>